--- a/index.qmd
+++ b/index.qmd
@@ -14,14 +14,12 @@ title-block-banner: true
 
 ## `hierarchy`
 
-Welcome to `hierarchy`, a blog about using regression, causal inference, machine learning, and hierarchical (multilevel) modeling to distinguish signal from noise. More broadly, we're going to use computational statistics to $1)$ measure unknowns, $2)$ think generatively, $3)$ quantify "luck" and "surprise", and $4)$ visualize and communicate uncertainty. Our goal is to [fail fast](https://www.youtube.com/watch?v=ppKpwtGy8KQ), and balance the size of our models, and the quality of our inference, on the level of  explainable variability in our data, compute, and mental sanity. epistemological vs aleatoric uncertainty
+Welcome to `hierarchy`, a blog about using regression, causal inference, machine learning, and hierarchical (multilevel) modeling to distinguish signal from noise. More broadly, we're going to use [computational statistics](https://en.wikipedia.org/wiki/Computational_statistics) to:
+1. measure unknowns
+2. think generatively
+3. quantify "luck" and "surprise"
+4. visualize and communicate the implications of our model & inference
 
-Testing testing
-
-i am testing i am testing
-
-
-i am making other edits
 I, [Kiran](https://www.linkedin.com/in/kiran-gauthier/) , did my PhD in the [Bishop Group](https://bishop.cheme.columbia.edu/) at Columbia University, graduating in August 2022, where I defended my thesis on *optimal experimental design for hierarchical, nonlinear systems* for characterization and design of autonomous microrobots. You can find it [here](https://clio.columbia.edu/catalog/16899459?counter=1). My goal was to use external fields (think magnetic, acoustic) to encode behaviours into microscale colloids to help them autonomously sense their environment, and accomplish tasks in noisy environments. multimodality
 
 I started thinking about the *value* of data early on in grad school, because my experiments took a long time to run and a lot of them gave me useless results. As an added complication, my setup varied slightly every day, so I had to constantly recalibrate my understanding of the underlying parameters of my system. That led me to thinking about [experimental design](https://en.wikipedia.org/wiki/Design_of_experiments) to suggest maximally informative experiments conditional on the data that I've already observed. I highly recommend [this](https://arxiv.org/pdf/astro-ph/0409386.pdf) excellent paper from Tom Loredo which got me started about thinking in terms of probabilities and distributions, and how we quantify information using [entropy](https://en.wikipedia.org/wiki/Entropy_(information_theory)). See the section on [experimental design](#experimental-design) for more info.
@@ -30,7 +28,8 @@ I started thinking about the *value* of data early on in grad school, because my
 **Why do I believe in statistical modeling:** [Chris Rackauckas](https://chrisrackauckas.com/) said in a [talk](https://youtu.be/bBH8HVEr0-A?si=_MHPc_CgPE9knED8&t=55) that "the major advances in machine learning were due to encoding more structure into the model" with a subquote of "MORE STRUCTURE = FASTER AND BETTER FITS FROM LESS DATA" and that sums it up pretty well. I think that building models that more closely resemble the "true" data generating process are our best hope of actually learning what's going on under the hood. And although it's fun to throw compute at a problem, I believe in [failing](https://stat.columbia.edu/~gelman/research/unpublished/Bayesian_Workflow_article.pdf) [fast](https://www.youtube.com/watch?v=ppKpwtGy8KQ) and in the power of the iterative model building [workflow](https://arxiv.org/pdf/2011.01808.pdf) using fast, and often approximate inference.
 
 Ultimately, our models are only ever an approximation of reality, summarized perfectly by George Box when he said ["all models are wrong, but some are useful"](https://en.wikipedia.org/wiki/All_models_are_wrong). Our goal is then to find a model, $M$,
-![Coarse graining the true data-generating process](assets/1_BayesianDesign.png).
+
+![Coarse graining the true data-generating process](assets/1_BayesianDesign.png){.center} .
 
 
 
