--- a/index.qmd
+++ b/index.qmd
@@ -17,8 +17,6 @@ categories: [intro]
 
 Welcome to `hierarchy`, a blog about using regression, causal inference, machine learning, and hierarchical (multilevel) modeling to distinguish signal from noise.
 
-I graduated with my PhD from Columbia University in 2022, where my focus was using **computational statistics** to optimize the adaptive experimental design of nonlinear, hierarchical models.
-
-The framework that I developed is especially useful when you have a small amount of data, observed from noisy individuals in heterogeneous groups (hierarchy), and you need to find where to look next (design). Think "how much medicine should I treat a group of patients with rare disease given that they will all process the drug in distinctively different ways"?
+I graduated with my PhD from Columbia University in 2022, where my [thesis](https://clio.columbia.edu/catalog/16899459?counter=1) was the use of *computational statistics* to optimize experimental design of nonlinear, hierarchical models. I regularly use `Python` (`TensorFlow`, `PyTorch`, `PyMC`), `R` (`brms`, `tidyverse`, `caret`), and `Stan` (`BridgeStan`) to answer the questions I have about my data. I'm passionate about quantifying uncertainty, stochastic optimization, forecasting, game theory, and scientific ML.
 
 Find me [here](https://www.linkedin.com/in/kiran-gauthier/), or send me an [email](mailto:kiran.gauthier@columbia.edu).
