--- a/posts/3-card-riddle/index.qmd
+++ b/posts/3-card-riddle/index.qmd
@@ -8,7 +8,7 @@ image: "assets/Simpson's_paradox_continuous.svg"
 
 ## Why is hierarchy important?
 
-Things that look like other things can share information. This is the fundamental concept that underlies hierarchical modeling. ... and it has the nice property of helping to stabilize our estimates, especially when there's not a ton of data.
+Things that look like other things can share information. This is the fundamental underlying hierarchical modeling, and it has the nice property of helping to stabilize our estimates, especially when there's not a ton of data.
 
 Intuitively, this makes sense, if I know something about your neighbor, it might tell me something about you. If I treated you as independent entities, I'm probably throwing away information. There is a chance that you're very dissimilar, but odds are you are more similar to people in your county / state / who share your same job / play the same position as you than you are for people in other groups.
 
