--- a/about.qmd
+++ b/about.qmd
@@ -16,9 +16,9 @@ about:
 
 ---
 
-## About `hierarchy`
+move this to the above, 
 
-Welcome to `hierarchy`, a blog about using regression, causal inference, machine learning, and hierarchical (multilevel) modeling to distinguish signal from noise. More broadly, we're going to use [computational statistics](https://en.wikipedia.org/wiki/Computational_statistics) to:
+Welcome to *hierarchy*, a blog about using regression, causal inference, machine learning, and hierarchical (multilevel) modeling to distinguish signal from noise. More broadly, we're going to use [computational statistics](https://en.wikipedia.org/wiki/Computational_statistics) to:
 
 1. measure unknowns
 2. think generatively
