--- a/index.qmd
+++ b/index.qmd
@@ -17,6 +17,6 @@ categories: [intro]
 
 Welcome to `hierarchy`, a blog about using regression, causal inference, machine learning, and hierarchical (multilevel) modeling to distinguish signal from noise in data; usually by thinking about the [data generating process](https://bob-carpenter.github.io/stan-getting-started/stan-getting-started.html).
 
-I graduated with my PhD from Columbia University in 2022, where the focus of my [dissertation](https://clio.columbia.edu/catalog/16899459?counter=1) was the use of *computational statistics* to optimize experimental design of nonlinear, hierarchical models. I regularly use `Python` (`TensorFlow`, `PyTorch`, `PyMC`), `R` (`brms`, `cmdstanr`, `tidyverse`), and `Stan` (`BridgeStan`) to answer the questions I have about the information contained in my data. I'm passionate about quantifying uncertainty, stochastic optimization, forecasting, game theory, and scientific ML.
+I graduated with my PhD from Columbia University in 2022, where the focus of my [dissertation](https://clio.columbia.edu/catalog/16899459?counter=1) was the use of *computational statistics* to optimize experimental design of nonlinear, hierarchical models. Most of the work I do involves `Python` {`TensorFlow`, `PyTorch`, `PyMC`}, `R` {`brms`, `cmdstanr`, `tidyverse`}, `Stan` (`BridgeStan`), and a bit of `Julia` to answer the questions I have about my data. I'm passionate about statistical modeling to quantify uncertainty, causal inference, stochastic processes, game theory, and [scientific ML](https://sciml.ai/).
 
-Find me [here](https://www.linkedin.com/in/kiran-gauthier/), or send me an [email](mailto:kiran.gauthier@columbia.edu) :)
+Find me [here](https://www.linkedin.com/in/kiran-gauthier/), or send me an [email](mailto:kiran.gauthier@columbia.edu)!
