--- a/posts/3-card-riddle/index.qmd
+++ b/posts/3-card-riddle/index.qmd
@@ -1,10 +1,59 @@
 ---
-title: "Why hierarchical models?"
+title: "3 card problem"
 author: "Kiran Gauthier"
 date: "2024-04-02"
-categories: [hierarchical modeling, partial pooling, Python, R]
+categories: [probability, brain teasers]
 image: "assets/Simpson's_paradox_continuous.svg"
 ---
+
+Something that I learned
+
+replicate and cite from AJ solomun but redo it for this problem
+
+lines_1 <-
+  lines_1 %>%
+  mutate(remain = c(rep(0:1, times = c(1, 3)),
+                    rep(0,   times = 4 * 3)))
+
+lines_2 <-
+  lines_2 %>%
+  mutate(remain = c(rep(0,   times = 4),
+                    rep(1:0, times = c(1, 3)) %>%
+                      rep(., times = 3),
+                    rep(0,   times = 12 * 4)))
+
+d <-
+  d %>%
+  mutate(remain = c(rep(1:0, times = c(1, 3)),
+                    rep(0:1, times = c(1, 3)),
+                    rep(0,   times = 4 * 4),
+                    rep(1:0, times = c(1, 3)) %>%
+                      rep(., times = 3),
+                    rep(0,   times = 12 * 4)))
+
+# finally, the plot:
+d %>%
+  ggplot(aes(x = position, y = draw)) +
+  geom_segment(data  = lines_1,
+               aes(x = x, xend = xend,
+                   y = y, yend = yend,
+                   alpha = remain %>% as.character()),
+               size  = 1/3) +
+  geom_segment(data  = lines_2,
+               aes(x = x, xend = xend,
+                   y = y, yend = yend,
+                   alpha = remain %>% as.character()),
+               size  = 1/3) +
+  geom_point(aes(fill = fill, alpha = remain %>% as.character()),
+             shape = 21, size = 4) +
+  # it's the alpha parameter that makes elements semitransparent
+  scale_alpha_manual(values = c(1/10, 1)) +
+  scale_fill_manual(values  = c("navy", "white")) +
+  scale_x_continuous(NULL, limits = c(0, 4), breaks = NULL) +
+  scale_y_continuous(NULL, limits = c(0.75, 3), breaks = NULL) +
+  theme(panel.grid      = element_blank(),
+        legend.position = "none") +
+  coord_polar()
 
 ## Why is hierarchy important?
 
